# novaura.life-official

./: .gitignore  AGENT_SWARM_FEATURE.md  API_CODEX.md  API_KEY_COMPLIANCE_SETUP.md  AUDIT.md  AUDIT_COMPETITIVE_ANALYSIS.md  AVATAR_STUDIO_ARCHITECTURE.md  AVATAR_STUDIO_IMPLEMENTATION.md  CLEAN_PRICING.md  CODING_IDE_MARKET_READINESS_ANALYSIS.md  CYBENI_IDE_ENHANCEMENT_PLAN.md  CYBENI_IDE_OMNI_BUILDER_SUMMARY.md  DESKTOP_EXE_ENHANCEMENTS.md  DESKTOP_POWER_UPGRADE.md  GAMES_ROADMAP.md  GETTING_STARTED_GUIDE.md  LITERATURE_IDE_ENHANCEMENT_PLAN.md  LITERATURE_IDE_IMPLEMENTATION_SUMMARY.md  LOCAL_SETUP.md  MISSING_FEATURES_ACTION_PLAN.md  NOVAURA_PLATFORM_AUDIT_2026-04-01.json  NOVAURA_PLATFORM_AUDIT_AND_INVESTOR_DECK.md  NOVAURA_SBA_INVESTOR_SUMMARY.md  PIXAI_SECURITY_FIX.md  PRE_LAUNCH_API_AUDIT.md  REBUILD_ROADMAP.md  SECURITY_AUDIT.md  SITEMAP.md  TCG_CARD_FORGE_SUMMARY.md  TIERED_PRICING.md  VIBE_CODING_ENHANCEMENT_DESIGN.md  novacticaspacefighter.html  novaura-signature.html  search.js  temp_main.jsx
.claude/: settings.local.json
.claude/agents/: novaura os.agent.md
NovAura-WebOS/: .firebaserc  .gitignore  BUG_REPORT_TEMPLATE.md  DEPLOY_FIREBASE.ps1  DEPLOY_NOW.bat  EXTERNAL_REPOS.md  FACEBOOK_POST.md  FIREBASE_SETUP.md  RAPID_RESPONSE_WORKFLOW.md  TRIPLE_HOST_ARCHITECTURE.md  TROLL_RESPONSE_PLAYBOOK.md  build-combined.ps1  build-landing.bat  deploy-firebase.ps1  firebase.json  firebase.landing.json  firestore.indexes.json  firestore.rules  hosting_sites.json  index.html  landing.html  matrix-preview.html  package-lock.json  package.json  polsia.json  pop out icons.txt  replit.md  start-local.bat  start-local.sh  storage.rules  tailwind.config.js  themes-preview.html  vite.config.js
NovAura-WebOS/public/: sw.js  (+6 more)
Novaura-Desktop/: README.md  SETUP.md  index.html  package-lock.json  package.json  vite.config.js
Novaura-Desktop/src-tauri/: Cargo.toml  tauri.conf.json
Novaura-Desktop/src-tauri/icons/: icon.icns
Novaura-Desktop/src-tauri/src/: commands.rs  commands_extra.rs  database.rs  file_watcher.rs  main.rs  ollama.rs  streaming.rs  system.rs  terminal.rs
Novaura-Portable/: README.md  index.html  package.json  vite.config.js
Novaura-Portable/src-tauri/: Cargo.toml  tauri.conf.json
Novaura-Portable/src-tauri/src/: backup.rs  context.rs  main.rs  session.rs  storage.rs
The-Gilded-Cage/: .replit  app.json  design_guidelines.md  package-lock.json  package.json  replit.md
docs/: 1-day-sprint.md  alibaba-prep.txt  alibaba-proposal.md  code-comparison.md  context-background-system.md  missing-features-audit.md
(+342 files in other folders)
