[package]
name = "novaura-portable"
version = "0.1.0"
description = "Novaura Web OS - Portable Desktop Edition"
authors = ["Aura x Nova"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open", "system-tray", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# SQLite
rusqlite = { version = "0.30", features = ["bundled", "chrono", "uuid"] }

# File operations
dirs = "5.0"
walkdir = "2.4"

# Compression for backups
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# Auto-save timer
tokio-scheduler = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
